hphp/hack/test/typecheck/new_inference/eager_solve/coalesce_union_nothing.php.like_types.exp
File "coalesce_union_nothing.php", line 17, characters 19-34:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
